--- a/provision/playbooks/python.yml
+++ b/provision/playbooks/python.yml
@@ -1,12 +1,11 @@
-- name: Install python 3.9.6
+- name: Install python 3.11.2
   hosts:
     - all
 
   gather_facts: false
   vars_files:
-    - constants/python.yml
     - constants/urls.yml
-    - constants/aws.yml
+    - constants/instance.yml
  
   pre_tasks:
   
@@ -17,11 +16,24 @@
       ansible.builtin.yum:
         name:
           - gcc
-          - openssl
+          - perl-core
+          - pcre-devel
           - bzip2-devel 
           - libffi-devel 
           - zlib-devel
-
+          - sqlite-devel
+          - readline-devel
+          - gdbm-devel
+          - uuid-devel          
+          - xz-devel 
+          - ncurses-devel 
+          - tk-devel 
+          - db4-devel 
+          - libpcap-devel 
+          - expat-devel
+          - tkinter 
+          - lzma 
+          
     - name: Create download directory
       ansible.builtin.file:
         path: "{{ download_dir }}"
@@ -32,77 +44,39 @@
  
   tasks:
   
-    - name: Find out if python 3.9 is installed
-      ansible.builtin.stat:
-        path: "{{ python_dir }}/{{ python_exec }}"
-      register: python_data   
-      
-    - debug:
-        var: python_data.stat.exists     
-
     - name: Download python archive
       ansible.builtin.get_url:
         url: "{{ python_download_url }}"
         dest: "{{ download_dir }}"
         owner: "{{ aws_user }}"
-        group: "{{ aws_user }}"
-      when: not python_data.stat.exists   
+        group: "{{ aws_user }}" 
         
     - name: Unarchive python
       ansible.builtin.unarchive:
-        src: "{{ download_dir }}/{{ python_version }}.tgz"
+        src: "{{ download_dir }}/{{ python_archive }}"
         dest: "{{ download_dir }}"
         remote_src: true
-      when: not python_data.stat.exists
-        
+            
     - name: Initialize python
-      ansible.builtin.shell: "cd {{ download_dir }}/{{ python_version }}  && ./configure --enable-optimizations"
-      when: not python_data.stat.exists
-       
+      ansible.builtin.shell: "export LD_RUN_PATH={{ openssl_dir }}/lib && cd {{ download_dir }}/{{ python_archive_nm }} && ./configure --enable-optimizations --with-openssl={{ openssl_dir }} -C"
+      
     - name: Make python
-      ansible.builtin.shell: "cd {{ download_dir }}/{{ python_version }}  && make"
-      when: not python_data.stat.exists
+      ansible.builtin.shell: "cd {{ download_dir }}/{{ python_archive_nm }} && make clean && make"
       
     - name: Build python
-      ansible.builtin.shell: "cd {{ download_dir }}/{{ python_version }}  && make altinstall"
-      when: not python_data.stat.exists
+      ansible.builtin.shell: "cd {{ download_dir }}/{{ python_archive_nm }} && make altinstall"
       
-    - name: Find out if python 3.9 is installed
-      ansible.builtin.stat:
-        path: "{{ python_dir }}/{{ python_exec }}"
-      register: python_data   
-      
-    - debug:
-        var: python_data.stat.exists 
-        
-    - name: Find out if pip 3.9 is installed
-      ansible.builtin.stat:
-        path: "{{ python_dir }}/{{ pip_exec }}"
-      register: pip_data   
-      
-    - debug:
-        var: pip_data.stat.exists 
-        
-    - name: symlink /usr/bin/python -> {{ python_dir }}/{{ python_exec }}
-      raw: |
-          rm -f /usr/bin/python
-          rm -f /usr/bin/pip3
-          ln --symbolic {{ python_dir }}/{{ python_exec }} /usr/bin/python; 
-          ln --symbolic {{ python_dir }}/{{ pip_exec }} /usr/bin/pip3; 
-      become: true                  
-
-    - name: Create python virtualenv
-      pip:
+    - name: Create virtualenv
+      ansible.builtin.pip:
         name:
           - pip
         state: latest
         virtualenv: "{{ venv_path }}"
-        virtualenv_command: "python -m venv" 
-        
+        virtualenv_command: "{{ python_dir }}/{{ python_exec }} -m venv"   
+
   post_tasks:
   
     - name: Delete download directory
       ansible.builtin.file:
         path: "{{ download_dir }}"
-        state: absent
-        
+        state: absent        
