--- a/provision/playbooks/constants/instance.yml
+++ b/provision/playbooks/constants/instance.yml
@@ -2,6 +2,7 @@
 
 aws_user: awsadmin
 download_dir: /home/{{ aws_user }}/download
+application_dir: /home/{{ aws_user }}/cms
 
 python_dir: /usr/local/bin
 python_archive_nm: Python-3.11.2
