--- a/provision/ansible.cfg
+++ b/provision/ansible.cfg
@@ -4,6 +4,7 @@ inventory = inventory/aws_ec2.yml
 host_key_checking = False
 callback_enabled = timer
 nocows = 1
+interpreter_python=auto_silent  
 
 log_path=logs/ansible_log.txt
 stdout_callback = yaml
