--- a/provision/playbooks/postgresql.yml
+++ b/provision/playbooks/postgresql.yml
@@ -3,6 +3,8 @@
     - database_postgress
   gather_facts: false
   vars_files:
+    - constants/aws.yml
+    - constants/controller.yml
     - constants/secrets.yml
     
   handlers:
@@ -10,21 +12,18 @@
       service: name=postgresql state=restarted    
       
   pre_tasks:
+      
+    - name: 'Controller host'
+      ansible.builtin.debug:
+        msg:
+        - "domain: {{ instance_domain }}"
+        - "ssh port: {{ ansible_port }}"
+        - "ssh user: {{ ansible_user }}"
+        - "ssh key: {{ ansible_private_key_file }}"
   
     - name: upgrade all packages
       ansible.builtin.yum: name=* state=latest  
            
-    - name: Install a list of packages 
-      ansible.builtin.yum:
-        name:
-          - postgresql
-          - postgresql-server
-          
-    - name: "Install Python packages that allows Ansible modules to interact with the database"
-      ansible.builtin.pip: "name={{ item }}  state=present"
-      with_items:
-        - psycopg2-binary
-
   tasks: 
     - name: Display variables
       ansible.builtin.debug:
@@ -35,6 +34,17 @@
         - "nginx variables:"  
         - "db_name: {{ postgress.db_name }}"  
         - "db_user: {{ postgress.db_user }}" 
+
+    - name: Install a list of packages 
+      ansible.builtin.yum:
+        name:
+          - postgresql
+          - postgresql-server
+          
+    - name: "Install Python packages that allows Ansible modules to interact with the database"
+      ansible.builtin.pip: "name={{ item }}  state=present"
+      with_items:
+        - psycopg2-binary
                 
     - name: Find out if PostgreSQL is initialized
       ansible.builtin.stat:
