--- a/provision/playbooks/upgrade.yml
+++ b/provision/playbooks/upgrade.yml
@@ -2,6 +2,21 @@
   hosts:
     - all
   gather_facts: false
+  
+  vars_files:
+    - constants/aws.yml
+    - constants/controller.yml
+    
+  pre_tasks:
+      
+    - name: 'Controller host'
+      ansible.builtin.debug:
+        msg:
+        - "domain: {{ instance_domain }}"
+        - "ssh port: {{ ansible_port }}"
+        - "ssh user: {{ ansible_user }}"
+        - "ssh key: {{ ansible_private_key_file }}"
+    
   tasks:
     - name: update yum cache
       ansible.builtin.yum: update_cache=true
