--- a/provision/playbooks/openssl.yml
+++ b/provision/playbooks/openssl.yml
@@ -12,7 +12,7 @@
     - name: 'Controller host'
       ansible.builtin.debug:
         msg:
-        - "domain: {{ instance_domain }}"
+        - "domain: {{ aws_instance_dns_domain }}"
         - "ssh port: {{ ansible_port }}"
         - "ssh user: {{ ansible_user }}"
         - "ssh key: {{ ansible_private_key_file }}"
@@ -28,7 +28,7 @@
           
     - name: Create download directory
       ansible.builtin.file:
-        path: "{{ aws.instance.download.dir }}"
+        path: "{{ aws.instance.download.path }}"
         state: directory
         owner: "{{ aws.instance.user }}"
         group: "{{ aws.instance.user }}"
@@ -41,28 +41,28 @@
   
     - name: Download openssl archive
       ansible.builtin.get_url:
-        url: "{{ openssl.download_url }}"
-        dest: "{{ aws.instance.download.dir }}"
+        url: "{{ openssl.download.url }}"
+        dest: "{{ aws.instance.download.path }}"
         owner: "{{ aws.instance.user }}"
         group: "{{ aws.instance.user }}" 
         
     - name: Unarchive openssl
       ansible.builtin.unarchive:
-        src: "{{ aws.instance.download.dir }}/{{ openssl.archive }}"
-        dest: "{{ aws.instance.download.dir }}"
+        src: "{{ aws.instance.download.path }}/{{ openssl.archive.name }}"
+        dest: "{{ aws.instance.download.path }}"
         remote_src: true
       
     - name: Initialize openssl
-      ansible.builtin.shell: "cd {{ aws.instance.download.dir }}/{{ openssl.archive_nm }} && ./config --prefix={{ openssl.dir }} --openssldir={{ openssl.dir }}"
+      ansible.builtin.shell: "cd {{ aws.instance.download.path }}/{{ openssl.archive.directory }} && ./config --prefix={{ openssl.path }} --openssldir={{ openssl.path }}"
       
     - name: Build openssl
-      ansible.builtin.shell: "cd {{ aws.instance.download.dir }}/{{ openssl.archive_nm }} && make clean && make depend && make"
+      ansible.builtin.shell: "cd {{ aws.instance.download.path }}/{{ openssl.archive.directory }} && make clean && make depend && make"
       
     - name: Test openssl
-      ansible.builtin.shell: "cd {{ aws.instance.download.dir }}/{{ openssl.archive_nm }} && make test"  
+      ansible.builtin.shell: "cd {{ aws.instance.download.path }}/{{ openssl.archive.directory }} && make test"  
       
     - name: Install openssl
-      ansible.builtin.shell: "cd {{ aws.instance.download.dir }}/{{ openssl.archive_nm }} && make install"   
+      ansible.builtin.shell: "cd {{ aws.instance.download.path }}/{{ openssl.archive.directory }} && make install"   
       
     - name: Configure openssl
       ansible.builtin.shell: "sh -c 'echo /opt/openssl/lib/' > /etc/ld.so.conf.d/openssl-1.1.1t.conf"
@@ -74,7 +74,7 @@
       ansible.builtin.lineinfile:
         path: /home/{{ aws.instance.user }}/.bash_profile
         insertbefore: '^export PATH'
-        line: "PATH=$PATH:{{ openssl.dir }}/bin"
+        line: "PATH=$PATH:{{ openssl.path }}/bin"
         state: present
         
     - name: Openssl version
@@ -89,5 +89,5 @@
   
     - name: Delete download directory
       ansible.builtin.file:
-        path: "{{ aws.instance.download.dir }}"
+        path: "{{ aws.instance.download.path }}"
         state: absent                 
